# CUDA-Insight-AI

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: integration_example.py  test_llm_agent.py
src/: __init__.py
src/ai/: __init__.py  llm_agent.py  tool_calling_schema.json
src/analysis/: __init__.py  analyze_cli.py  static_analyzer.py
src/cli/: __init__.py  main.py
src/cuda/: __init__.py  runner.py
src/cuda/example_kernels/: divergent_kernel.cu  saxpy.cu  vector_add.cu
src/profiling/: CMakeLists.txt  README.md  __init__.py  profiler.cpp  profiler_wrapper.py
tests/: __init__.py  test_cli.py  test_llm_agent.py  test_profiler.py  test_runner_mock.py  test_static_analyzer.py
